--- a/views/index.html
+++ b/views/index.html
@@ -14,8 +14,8 @@
             <section class="shopping-cart dark">
                 <div class="container container__cart">
                     <div class="block-heading">
-                        <h2>Shopping Cart</h2>
-                        <p>This is an example of Mercado Pago Card Payment Brick Integration</p>
+                        <h2>Carro de compra</h2>
+                        <!--<p>This is an example of Mercado Pago Card Payment Brick Integration</p>-->
                     </div>
                     <div class="content">
                         <div class="row">
@@ -29,14 +29,14 @@
                                                         <img class="img-fluid mx-auto d-block image" src="img/product.png">
                                                     </div>
                                                     <div class="col-md-4 product-detail">
-                                                        <h5>Product</h5>
+                                                        <h5>Artículo</h5>
                                                         <div class="product-info">
-                                                            <p><b>Description: </b><span>White t-shirt</span><br>
-                                                                <b>Price:</b> $ <span id="unit-price">50</span></p>
+                                                            <p><b>Descripción: </b><span>Remera Blanca</span><br>
+                                                                <b>Precio:</b> $ <span id="unit-price">50</span></p>
                                                         </div>
                                                     </div>
                                                     <div class="col-md-3 product-detail">
-                                                        <label for="quantity"><h5>Quantity</h5></label>
+                                                        <label for="quantity"><h5>Canitdad</h5></label>
                                                         <input type="number" id="quantity" value="1" min="1" class="form-control">
                                                     </div>
                                                 </div>
@@ -47,9 +47,9 @@
                             </div>
                             <div class="col-md-12 col-lg-4">
                                 <div class="summary">
-                                    <h3>Cart</h3>
+                                    <h3>Carro</h3>
                                     <div class="summary-item"><span class="text">Subtotal</span><span class="price" id="cart-total"></span></div>
-                                    <button class="btn btn-primary btn-lg btn-block" id="checkout-btn">Checkout</button>
+                                    <button class="btn btn-primary btn-lg btn-block" id="checkout-btn">Comprar</button>
                                 </div>
                             </div>
                         </div>
@@ -60,15 +60,15 @@
             <section class="payment-form dark">
                 <div class="container__payment">
                     <div class="block-heading">
-                        <h2>Card Payment</h2>
-                        <p>This is an example of Mercado Pago Card Payment Brick Integration</p>
+                        <h2>Pago</h2>
+                        <!--<p>This is an example of Mercado Pago Card Payment Brick Integration</p>-->
                     </div>
                     <div class="form-payment">
                         <div class="products">
-                            <h2 class="title">Summary</h2>
+                            <h2 class="title">Resumen</h2>
                             <div class="item">
                                 <span class="price" id="summary-price"></span>
-                                <p class="item-name">Book x <span id="summary-quantity"></span></p>
+                                <p class="item-name">Remera x <span id="summary-quantity"></span></p>
                             </div>
                             <div class="total">Total<span class="price" id="summary-total"></span></div>
                             <input type="hidden" id="amount" />
@@ -80,7 +80,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 10 10" class="chevron-left">
                                 <path fill="#009EE3" fill-rule="nonzero"id="chevron_left" d="M7.05 1.4L6.2.552 1.756 4.997l4.449 4.448.849-.848-3.6-3.6z"></path>
                             </svg>
-                            Go back to Shopping Cart
+                            Volver al carro de compra
                         </a>
                     </div>
                 </div>
@@ -89,8 +89,8 @@
             <section class="shopping-cart dark">
                 <div class="container container__result">
                     <div class="block-heading">
-                        <h2>Payment Result</h2>
-                        <p>This is an example of Mercado Pago Card Payment Brick Integration</p>
+                        <h2>Resultado de pago</h2>
+                        <!--p>This is an example of Mercado Pago Card Payment Brick Integration</p>-->
                     </div>
                     <div class="content">
                         <div class="row">
@@ -102,7 +102,7 @@
                                                 <br>
                                                 <p><b>ID: </b><span id="payment-id"></span></p>
                                                 <p><b>Status: </b><span id="payment-status"></span></p>
-                                                <p><b>Detail: </b><span id="payment-detail"></span></p>
+                                                <p><b>Detalle: </b><span id="payment-detail"></span></p>
                                                 <br>
                                             </div>
                                         </div>
@@ -114,13 +114,13 @@
                 </div>
             </section>
         </main>
-        <footer>
+        <!--<footer>
             <div class="footer_logo"><img id="horizontal_logo" src="img/horizontal_logo.png"></div>
             <div class="footer_text">
                 <p>Developers Site:</p>
                 <p><a href="https://www.mercadopago.com/developers">https://www.mercadopago.com/developers</a></p>
             </div>
-        </footer>
+        </footer>-->
     </body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://sdk.mercadopago.com/js/v2"></script>
